--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.turkcell</groupId>
-            <artifactId>commonPackage</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        <groupId>com.turkcell.TurkcellCRM</groupId>
+        <artifactId>commonPackage</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
